--- a/m1/s1/g4/sito/assets/css/style.css
+++ b/m1/s1/g4/sito/assets/css/style.css
@@ -14,14 +14,15 @@ body {
     background-color: #3987a7;
 }
 .logo {
-    width: 400px;
-    height: 100px;
+    width: 70%;
+    height: 50%;
     padding: 2em;
     
 }
 .primo-titolo {
     font-size: 1.5em;
     color: white;
+    padding-top: 0.7em;
 }
 .menu-navigazione {
     padding: 2em;
@@ -43,32 +44,73 @@ body {
     box-shadow:  5px  5px 5px #dedede,
                  5px  5px 5px #dedede;
     margin: 1em;
-    border: 1px;
+    border: 1px solid;
     background-color: white;
 }
 /* ELEMENTI NEL MAIN - ARTICLE */
 .titolo-main {
     margin: 0;
-    padding-top: 1em;
-    padding-bottom: 1em;
+    padding: 1em 0 1em 0.6em;
     font-size: 2.5em;
     font-weight: bold;
+    line-height: 1.4em;
 }
 .autore {
     color: rgb(126, 135, 149);
     font-size: 1.3em;
-    padding-bottom: 2em;
+    padding: 0 0 2em 1.2em;
 }
 .testo{
     font-size: 1.3em;
+    padding: 0 1.2em 2em 1.2em;
 }
 .testo p strong{
-    color: blue;
+    color: rgb(89, 23, 100);
+    font-weight: bold;
 }
 
 
 /* TABELLE */
-
+.lista1 {
+    font-size: 1.3em;
+}
+.lista1 p {
+    padding: 0 1.2em 2em 1.2em;
+}
+.lista1 ul {
+    padding: 0 1.2em 2em 2.5em;
+    line-height: 1.3em;
+}
+.lista1 code {
+    background-color: skyblue;
+    border-radius: 25%;
+}
+.lista2 {
+    font-size: 1.3em;
+}
+.lista2 h2 {
+    padding-left: 1.2em;
+}
+.lista2 p {
+    padding: 0 1.2em 2em 1.2em;
+}
+.lista2 ol {
+    padding: 0 1.2em 2em 2.5em;
+    line-height: 1.3em;
+}
+.lista2 strong {
+    line-height: 1.3em;
+    color: rgb(89, 23, 100);
+    font-weight: bold;
+}
+.table {
+    padding: 0 1.2em 1.2em 1.2em;
+}
+.table caption {
+    font-size: 1.3em;
+    font-style: oblique;
+    font-weight: bold;
+}
 /* FORM */
 
 /* ELEMENTI NELL' ASIDE */
