--- a/m1/s1/g4/sito/assets/css/style.css
+++ b/m1/s1/g4/sito/assets/css/style.css
@@ -83,7 +83,7 @@ body {
 }
 .lista1 code {
     background-color: skyblue;
-    border-radius: 25%;
+    border-radius: 10px;
 }
 .lista2 {
     font-size: 1.3em;
@@ -111,8 +111,39 @@ body {
     font-style: oblique;
     font-weight: bold;
 }
+.table thead {
+    background-color: #6767e3;
+    font-size: 1.3em;
+    height: 50%;
+}
+.link {
+    font-size: 1.3em;
+    padding: 1.2em;
+}
+.link a {
+    font-weight: bold;
+}
+.video {
+    padding: 1.2em;
+}
+.video iframe {
+    width: 100%;
+    border-radius: 30px;
+}
 /* FORM */
-
+#iscrizione {
+    background-color: #a9d8eb;
+    padding: 1.2em;
+    margin: 1.2em;
+    font-size: 1.3em;
+    line-height: 1.5em;
+}
+.titolo-iscrizione {
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 1.2em;
+    font-size: 2em;
+}
 /* ELEMENTI NELL' ASIDE */
 
 /* FOOTER */
