--- a/m1/s1/g3/sito/CSS/style.css
+++ b/m1/s1/g3/sito/CSS/style.css
@@ -1,6 +1,7 @@
 body{
     color: rgb(97, 77, 77);
-    background-color: red;
+    background-color: black;
+
 }
 #contenuto-alto {
     text-align: center;
