--- a/m2/s3/g1/css/style.css
+++ b/m2/s3/g1/css/style.css
@@ -1,8 +1,7 @@
-form {
+#pet-form {
     display: flex;
     flex-direction: column;
-  }
-  input,
-  button {
+}
+input, button {
     width: 250px;
-  }
+}
