--- a/m3/s2/g2/progetto/src/app/pages/post-inattivi/post-inattivi.component.html
+++ b/m3/s2/g2/progetto/src/app/pages/post-inattivi/post-inattivi.component.html
@@ -1,1 +1,8 @@
-<p>post-inattivi works!</p>
+<table class="table">
+  <tr *ngFor="let post of postArray">
+    <td>{{ post.id }}</td>
+    <td>{{ post.title }}</td>
+    <td>{{ post.body }}</td>
+    <td>{{ post.active }}</td>
+  </tr>
+</table>
