--- a/m3/s3/g2/Progetto/src/app/pages/form-template-driven/form-template-driven.component.html
+++ b/m3/s3/g2/Progetto/src/app/pages/form-template-driven/form-template-driven.component.html
@@ -94,7 +94,7 @@
         />
       </div>
       <div class="col-12">
-        <button type="button" class="btn btn-primary w-100 mt-2">Crea</button>
+        <button type="submit" class="btn btn-primary w-100 mt-2">Crea</button>
       </div>
     </form>
   </div>
