--- a/m3/s3/g5-compito/project/src/app/pages/post/post.component.html
+++ b/m3/s3/g5-compito/project/src/app/pages/post/post.component.html
@@ -6,7 +6,11 @@
         <tr *ngFor="let macchina of auto">
           <td>{{ macchina.marca }}</td>
           <td>{{ macchina.prezzo | currency : "EUR" : "symbol" }}</td>
-          <td><a href="">MODIFICA</a></td>
+          <td>
+            <a [routerLink]="['/post', 'modificaAuto', macchina.id]"
+              >MODIFICA</a
+            >
+          </td>
           <td>
             <button class="btn btn-danger" (click)="delete(macchina.id)">
               ELIMINA
