--- a/m3/s3/g5-compito/project/src/app/pages/post/post.component.html
+++ b/m3/s3/g5-compito/project/src/app/pages/post/post.component.html
@@ -1,5 +1,8 @@
 <div class="container">
-  <a class="btn btn-primary" [routerLink]="['aggAuto']">Aggiungi auto</a>
+  <div class="d-flex justify-content-between">
+    <a class="btn btn-primary" [routerLink]="['aggAuto']">Aggiungi auto</a>
+    <button class="btn btn-primary" (click)="logout()">LOGOUT</button>
+  </div>
   <div class="row">
     <div class="col">
       <table class="table">
