--- a/m3/s3/g5-compito/project/src/app/pages/post/post.component.html
+++ b/m3/s3/g5-compito/project/src/app/pages/post/post.component.html
@@ -1,10 +1,15 @@
 <div class="container">
-  <div class="d-flex justify-content-between">
+  <div class="d-flex justify-content-between mb-3">
     <a class="btn btn-primary" [routerLink]="['aggAuto']">Aggiungi auto</a>
     <button class="btn btn-primary" (click)="logout()">LOGOUT</button>
   </div>
   <div class="row">
     <div class="col">
+      <div class="d-flex justify-content-center">
+        <div class="spinner-border" role="status" *ngIf="loading">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
       <table class="table">
         <tr *ngFor="let macchina of auto">
           <td>{{ macchina.marca }}</td>
