--- a/m3/s3/g5-compito/project/src/app/components/footer/footer.component.html
+++ b/m3/s3/g5-compito/project/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="py-3 my-4 fixed-bottom z-1">
+<footer class="py-3 fixed-bottom">
   <ul class="nav justify-content-center border-bottom pb-3 mb-3">
     <li class="nav-item">
       <a class="nav-link px-2 text-body-secondary">Home</a>
