--- a/m3/s3/g5-compito/project/src/app/components/header/header.component.html
+++ b/m3/s3/g5-compito/project/src/app/components/header/header.component.html
@@ -3,12 +3,12 @@
 >
   <ul class="nav nav-pills">
     <li class="nav-item">
-      <a [routerLink]="['']" class="nav-link active" aria-current="page"
-        >Login</a
+      <a
+        [routerLink]="['/auth', 'post']"
+        class="nav-link active"
+        aria-current="page"
+        >HOME</a
       >
-    </li>
-    <li class="nav-item">
-      <a [routerLink]="['/auth', 'register']" class="nav-link">Register</a>
     </li>
   </ul>
 </header>
