--- a/m3/s3/g5-compito/project/src/app/components/header/header.component.html
+++ b/m3/s3/g5-compito/project/src/app/components/header/header.component.html
@@ -3,10 +3,7 @@
 >
   <ul class="nav nav-pills">
     <li class="nav-item">
-      <a
-        [routerLink]="['/auth', 'post']"
-        class="nav-link active"
-        aria-current="page"
+      <a [routerLink]="['post']" class="nav-link active" aria-current="page"
         >HOME</a
       >
     </li>
