--- a/m3/s3/g5-compito/project/src/app/pages/post/aggiungi-auto/aggiungi-auto.component.html
+++ b/m3/s3/g5-compito/project/src/app/pages/post/aggiungi-auto/aggiungi-auto.component.html
@@ -6,6 +6,7 @@
           type="text"
           class="my-2 form-control"
           name="marca"
+          required
           placeholder="Inserisci modello"
           [(ngModel)]="data.marca"
         />
@@ -13,6 +14,7 @@
           type="number"
           class="my-2 form-control"
           name="prezzo"
+          required
           placeholder="Inserisci prezzo"
           [(ngModel)]="data.prezzo"
         />
